<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/gradient_back2"
    tools:context=".activities.VerificationActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="20sp"
        android:text="@string/verification"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:layout_marginTop="-20dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/userName"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:autofillHints="name"
        android:background="@drawable/username_bg"
        android:hint="@string/enter_your_name"
        android:textColor="@color/teal_200"
        android:inputType="textPersonName"
        android:paddingStart="15sp"
        android:textSize="20sp"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/userMobileNumber"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:autofillHints="phone"
        android:background="@drawable/username_bg"
        android:hint="@string/mobile_number"
        android:inputType="number"
        android:textColor="@color/teal_200"
        android:maxLength="10"
        android:paddingStart="15sp"
        android:textSize="20sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/getOTP_bt"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:focusable="true"
        android:text="@string/get_otp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp" />

        <FrameLayout
            android:id="@+id/otpFrame"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10sp"
            android:layout_marginTop="15dp" />

</LinearLayout>